# taskflow

./: .gitignore  CLAUDE.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend-graphene/: .env.example  .gitignore  CLAUDE.md  Dockerfile  conftest.py  package.json  pyproject.toml
apps/backend-graphene/config/: asgi.py  schema.py  urls.py  wsgi.py
apps/backend-graphene/config/settings/: base.py  test.py
apps/backend-graphene/organizations/: decorators.py  models.py  mutations.py  queries.py  schema.py  types.py
apps/backend-graphene/organizations/migrations/: 0001_initial.py
apps/backend-graphene/organizations/tests/: conftest.py  factories.py  test_member_management.py  test_models.py  test_mutations.py  test_permissions.py  test_queries.py
apps/backend-graphene/projects/: decorators.py  models.py  mutations.py  queries.py  schema.py  types.py
apps/backend-graphene/projects/migrations/: 0001_initial.py
apps/backend-graphene/projects/tests/: conftest.py  factories.py  test_models.py  test_mutations.py  test_queries.py
apps/backend-graphene/users/: decorators.py  managers.py  middleware.py  models.py  mutations.py  queries.py  schema.py  serializers.py  tokens.py  types.py  urls.py  utils.py  views.py
apps/backend-graphene/users/migrations/: 0001_initial.py
apps/backend-graphene/users/tests/: conftest.py  factories.py  test_email_verification.py  test_login.py  test_logout.py  test_middleware.py  test_models.py  test_openapi_schema.py  test_password_change.py  test_password_reset.py  test_profile.py  test_profile_image.py  (+2 more)
(+39 files in other folders)
